 * Added support for an "auth_basic" config to use basic authentication on specific URLs

2008-05-20 tdb
 * Render sub-object XML using MetaField::Subobject on XML export

2008-05-20 cjg
 * new Script option: as_string, which converts a typed value to a plain string. Useful for inserting a value into an attribute.
 * epc:phrase refs now expound out {} so values from the object can be used to build the phrase id.
 * Redesigned document citation to be neater and show all fields.
  
2008-05-20 cjg
 * Fixed some minor warnings in Views.pm
 * Added divisions to default eprint summary page.
 * Made subjects inside a "ifset" in summary page.
 * Added a divisions view.
 * Made the divisions view field link to the view.
 * Linked the divisions from the template.
 * Added "reverse" option to a view variation to list the groupings backwards. eg. for dates.

2008-05-20 cjg
 * Added policies page with a link to OpenDOAR.
 * Linked to policies page from default homepage.

2008-05-22 tdb
 * Moved XML::tidy from DataObjs into export plugins
 * Removed getElementsByTagName in DataObj::File, fixing #3376

2008-05-22 tdb
 * Added "url" and "data" virtual fields to DataObj::File
 * Simplified and made Import::XMLFiles inherit from Import::XML (moved
    file-specific code into DataObj::File)
 * MetaField::is_virtual now looks at a "virtual" property, allowing any field
    type to be defined as virtual
 * Pass opts into MetaField from DataObj::to_xml
 * Added "Base64" field type, that just adds "encoding" attribute to_xml
 * Adding a file to a document that has main set incorrectly now overwrites the
    main value with the first file (as if it was unset)
 * Added file dataset to erase_eprints epadmin command
 * XMLFiles export now embeds all files, not just data files, and includes the
    EP data namespace
 * Fixed DataObj::File::get_defaults not overwriting fileid values
 * Fixed removing files

2008-05-24 cjg
 * Added SWORD support.
